--- a/music/index.html
+++ b/music/index.html
@@ -38,7 +38,7 @@ Lưu File
 </div>
 <div class="card-footer text-muted text-center">
 Made by <a href="https://www.facebook.com/hau.duonghuu"></a>
-for TBN.
+for Single User.
 </div>
 </div>
 </div>
