--- a/music/index.html
+++ b/music/index.html
@@ -37,7 +37,7 @@ Lưu File
 </div>
 </div>
 <div class="card-footer text-muted text-center">
-Made by <a href="https://www.facebook.com/hau.duonghuu"></a>
+Made by <a href="https://www.facebook.com/hau.duonghuu"> Duong Huu Hau</a>
 for Single User.
 </div>
 </div>
